2002-06-25  Darin Adler  <darin@apple.com>

        * WebCoreSupport.subproj/IFResourceURLHandleClient.m:
        (-[IFResourceURLHandleClient IFURLHandleResourceDidCancelLoading:]):
        (-[IFResourceURLHandleClient IFURLHandleResourceDidFinishLoading:data:]):
        (-[IFResourceURLHandleClient IFURLHandle:resourceDidFailLoadingWithResult:]):
	Don't remove the URL handle from the data source until we've finished the
	loading process in KDE code. This may fix 2968527.

        * WebCoreSupport.subproj/IFTextRenderer.m: Keep around commented printfs so
	I can do the "dump all strings as they are rendered" again.

        * WebKit.pbproj/project.pbxproj: Re-add -Wmissing-format-attribute.

2002-06-25  Darin Adler  <darin@apple.com>

        * WebCoreSupport.subproj/IFImageRenderer.m:
        (-[IFImageRenderer tileInRect:fromPoint:]): Remove stray NSLog.

2002-06-25  Darin Adler  <darin@apple.com>

	- fixed 2968298 -- IFImageRenderer crash at download.com

        * WebCoreSupport.subproj/IFImageRenderer.m:
        (-[IFImageRenderer initWithSize:]): Override this instead of [init].
	This is the designated initializer and all the others call this.
        (-[IFImageRenderer copyWithZone:]): Override to nil out fields that
	can't be shared by the copy.

	Fix leaks.

        * History.subproj/IFURIEntry.m:
        (-[IFURIEntry initWithURL:title:image:]): Use copy instead of retain
	in case we are passed a mutable string.
        (-[IFURIEntry dealloc]): Release _displayTitle. Fixes a leak.
        (-[IFURIEntry setTitle:]): Use copy instead of retain in case we are
	passed a mutable string.
        (-[IFURIEntry setDisplayTitle:]): Use copy instead of retain in case
	we are passed a mutable string.
        (-[IFURIEntry initFromDictionaryRepresentation:]): Lose the extra
	retain for _lastVisitedDate. Fixes a leak.

2002-06-24  Darin Adler  <darin@apple.com>

        * Panels.subproj/IFStandardPanels.m: