@@ -1,3 +1,13 @@
+2002-06-25  Richard Williamson  <rjw@apple.com>
+
+       Extended our text measurement rounding work-around for integer-float 
+       mismatch to round on word boundaries as well as spaces.
+
+        * WebCoreSupport.subproj/IFTextRenderer.m:
+        (-[IFTextRenderer drawGlyphs:numGlyphs:atPoint:withColor:]):
+        (-[IFTextRenderer slowFloatWidthForCharacters:length:applyRounding:]):
+        (-[IFTextRenderer floatWidthForCharacters:length:applyRounding:]):
+
 2002-06-25  Darin Adler  <darin@apple.com>
 
         * WebCoreSupport.subproj/IFResourceURLHandleClient.m:
